--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
 My GitHub Static Website for AWS Projects
+
+
+Followed this link to set up my github static page:
+https://pages.github.com/ -- https://shanmorton.github.io/
