Updated with some HTML tags

--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
+<HTML>
+<center>
 My GitHub Static Website for AWS Projects
 
-
+<br>
 Followed this link to set up my github static page:
+<br>
 https://pages.github.com/ -- https://shanmorton.github.io/
+
+<br>
+<center>
+</HTML>
