Added email address

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@ Followed this link to set up my github static page:
 https://pages.github.com/ -- https://shanmorton.github.io/
 
 <br>
-<center>
+email: ShanMorton@gmail.com
+<br>
+</center>
 </HTML>
